*SVN*

* Added support for Mime objects in render :content_type option [DHH]. Example: render :text => some_atom, :content_type => Mime::ATOM

* Add :status option to send_data and send_file. Defaults to '200 OK'.  #5243 [Manfred Stienstra <m.stienstra@fngtps.com>]

* Routing rewrite. Simpler, faster, easier to understand. The published API for config/routes.rb is unchanged, but nearly everything else is different, so expect breakage in plugins and libs that try to fiddle with routes. [Nicholas Seckar, Jamis Buck]

  map.connect '/foo/:id', :controller => '...', :action => '...'
  map.connect '/foo/:id.:format', :controller => '...', :action => '...'
  map.connect '/foo/:id', ..., :conditions => { :method => :get }

* Cope with missing content type and length headers. Parse parameters from multipart and urlencoded request bodies only. [Jeremy Kemper]

* Accept multipart PUT parameters. #5235 [guy.naor@famundo.com]

* Added interrogation of params[:format] to determine Accept type. If :format is specified and matches a declared extension, like "rss" or "xml", that mime type will be put in front of the accept handler. This means you can link to the same action from different extensions and use that fact to determine output [DHH]. Example:

  class WeblogController < ActionController::Base
    def index
      @posts = Post.find :all
      
      respond_to do |format|
        format.html
        format.xml { render :xml => @posts.to_xml }
        format.rss { render :action => "feed.rxml" }
      end
    end
  end
  
  # returns HTML when requested by a browser, since the browser
  # has the HTML mimetype at the top of its priority list
  Accept: text/html
  GET /weblog 
  
  # returns the XML 
  Accept: application/xml
  GET /weblog 

  # returns the HTML 
  Accept: application/xml
  GET /weblog.html

  # returns the XML
  Accept: text/html
  GET /weblog.xml
  
  All this relies on the fact that you have a route that includes .:format.
  